# RustWebServer

./: .gitignore  Cargo.toml  docker-compose.yaml  state.json
css/: base.css  main.css
javascript/: main.js
src/: main.rs  state.rs
src/javascript/: main.js
src/json_serialization/: to_do_item.rs  to_do_items.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs  token.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
templates/: main.html
