[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "*", default-features = false, features = ["alloc"]}
actix-web = "4.4.0"
actix-rt = "2.9.0"
futures = "0.3.28"
serde = {version = "*", features = ["derive"]} 